Fix "overflow: hidden" in autopilot for iOS devices

--- a/client/src/app/site/pages/meetings/modules/projector/components/projector/projector.component.scss
+++ b/client/src/app/site/pages/meetings/modules/projector/components/projector/projector.component.scss
@@ -1,6 +1,7 @@
 #container {
     background-color: lightgoldenrodyellow;
     position: relative;
+    overflow: hidden;
 
     #offline-indicator {
         top: 0 !important;
